--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,37 @@
 body {
   margin: 0;
-  font-family: sistem-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: hsl(203, 100%, 95%);
 }
 
+* {
+  font-family: 'Inter', system-ui;
+}
 
+.wrapper {
+  background: #ffffff;
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
+  border-radius: 20px;
+  max-width: 1080px;
+  margin: 50px auto;
+}
 
-body {
+header {
+  border-bottom: 1px solid #eaeaea;
+
+  img {
+    margin-right: 15px;
+  }
+
+  h3,
+  p {
+    margin: 0;
+  }
+}
+
+.content {
   h1 {
-    color: red;
-
-    span {
-      color: blue;
-    }
+    margin: 0;
   }
 }
