--- a/src/index.scss
+++ b/src/index.scss
@@ -35,3 +35,48 @@ header {
     margin: 0;
   }
 }
+
+.card {
+  border: 1px solid #f3f3f3;
+  width: 210px;
+  border-radius: 20px;
+  padding: 30px;
+}
+
+h5 {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+span {
+  font-size: 13px;
+  opacity: 0.5;
+  text-transform: uppercase;
+}
+
+b {
+  font-size: 14px;
+}
+
+.button {
+  background-color: #ffffff;
+  border: 1px solid #f2f2f2;
+  box-sizing: border-box;
+  width: 32px;
+  height: 32px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.search-block {
+  border: 1px solid #f3f3f3;
+  border-radius: 10px;
+  padding: 0 15px;
+}
+
+input {
+  padding: 13px;
+  border: 0;
+  font-size: 16px;
+  width: 200px;
+}
