--- a/src/index.scss
+++ b/src/index.scss
@@ -41,31 +41,44 @@ header {
   width: 210px;
   border-radius: 20px;
   padding: 30px;
-}
 
-h5 {
-  font-size: 14px;
-  font-weight: 400;
-}
 
-span {
-  font-size: 13px;
-  opacity: 0.5;
-  text-transform: uppercase;
-}
+  .favorite {
+    position: absolute;
+    cursor: pointer;
+    transition: box-shadow 0.2ms ease-in-out transform 0.2ms ease-in-out;
+  }
 
-b {
-  font-size: 14px;
-}
+  &:hover {
+    box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.06);
+    transform: translateY(-5px);
+  }
 
-.button {
-  background-color: #ffffff;
-  border: 1px solid #f2f2f2;
-  box-sizing: border-box;
-  width: 32px;
-  height: 32px;
-  border-radius: 8px;
-  cursor: pointer;
+  h5 {
+    font-size: 14px;
+    font-weight: 400;
+  }
+
+  span {
+    font-size: 13px;
+    opacity: 0.5;
+    text-transform: uppercase;
+  }
+
+  b {
+    font-size: 14px;
+  }
+
+  .button {
+    background-color: #ffffff;
+    border: 1px solid #f2f2f2;
+    box-sizing: border-box;
+    width: 32px;
+    height: 32px;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+
 }
 
 .search-block {
@@ -79,4 +92,67 @@ input {
   border: 0;
   font-size: 16px;
   width: 200px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.drawer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 420px;
+  height: 100%;
+  background-color: #fff;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.01);
+  padding: 30px;
+
+  h2 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+
+  .cartItem {
+    border: 1px solid #f3f3f3;
+    border-radius: 20px;
+    padding: 20px;
+    overflow: hidden;
+
+    .cartItemImg {
+      width: 70px;
+      height: 70px;
+      background-size: contain;
+      background-position: 0 -3px;
+      background-repeat: no-repeat;
+      margin-right: 20px;
+    }
+
+    p {
+      font-size: 16px;
+    }
+
+    b {
+      font-size: 14px;
+    }
+
+    .removeBtn {
+      opacity: 0.5;
+      transition: 0.15 ease-in-out;
+      cursor: pointer;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+
+
 }
