--- a/src/index.scss
+++ b/src/index.scss
@@ -116,6 +116,11 @@ input {
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.01);
   padding: 30px;
 
+  .items {
+    overflow: auto;
+    margin-bottom: 40px;
+  }
+
   h2 {
     font-size: 24px;
     font-weight: bold;
@@ -163,6 +168,12 @@ input {
   }
 
   .cartTotalBlock {
+    ul {
+      display: block;
+      margin-bottom: 40px !important;
+
+    }
+
     li {
       display: flex;
       align-items: flex-end;
@@ -175,7 +186,38 @@ input {
       height: 1;
     }
 
+  }
 
+  .greenButton {
+    position: relative;
+    width: 100%;
+    height: 55px;
+    background-color: #9dd558;
+    color: #fff;
+    border: 0;
+    border-radius: 18px;
+    font-size: 16px;
+    font-weight: 600;
+    transition: background 0.15s ease-in-out;
+
+    &:hover {
+      background-color: lighten($color: #9dd558, $amount: 5%);
+
+      img {
+        transform: translateX(10px);
+      }
+    }
+
+    &:active {
+      background-color: darken($color: #9dd558, $amount: 5%);
+    }
+
+    img {
+      position: absolute;
+      right: 30px;
+      top: 20px;
+      transition: transform 0.2s ease-in-out;
+    }
   }
 
 
