--- a/src/index.scss
+++ b/src/index.scss
@@ -36,18 +36,27 @@ header {
   }
 }
 
-
 .search-block {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
-}
+  position: relative;
 
-input {
-  padding: 13px;
-  border: 0;
-  font-size: 16px;
-  width: 200px;
+  .clear {
+    position: absolute;
+    right: 0;
+    width: 18px;
+    height: 18px;
+    top: 14px;
+    right: 15px;
+  }
+
+  input {
+    border: 0;
+    padding: 13px;
+    font-size: 16px;
+    width: 200px;
+  }
 }
 
 .overlay {
