--- a/src/index.scss
+++ b/src/index.scss
@@ -225,7 +225,7 @@ header {
     border: 0;
     border-radius: 4px;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 400;
     background: #f7f7f7;
     color: #333;
     transition: background 0.15s ease-in-out;
@@ -245,5 +245,12 @@ header {
     font-weight: 600;
     transition: background 0.15s ease-in-out;
   }
+
+}
+
+.register {
+  font-size: 16px;
+  font-weight: 400;
+  margin: 40px 0px;
 
 }
