--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: hsl(203, 100%, 95%);
+  background-color: #e7f6ff;
 }
 
 * {
@@ -36,6 +36,34 @@ header {
   }
 }
 
+.cartEmpty {
+  text-align: center;
+
+  p {
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
+
+    &:hover {
+      img {
+        transform: rotate(180deg) translateX(3px);
+      }
+    }
+
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
+
 .search-block {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
@@ -59,193 +87,120 @@ header {
   }
 }
 
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
-}
-
-.drawer {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 420px;
-  height: 100%;
-  background-color: #fff;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.01);
-  padding: 30px;
-
-  .items {
-    flex: 1;
-    overflow: auto;
-    margin-bottom: 40px;
-  }
-
-  h2 {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-
-  .cartItem {
-    border: 1px solid #f3f3f3;
-    border-radius: 20px;
-    padding: 20px;
-    overflow: hidden;
-
-    .cartItemImg {
-      width: 70px;
-      height: 70px;
-      background-size: contain;
-      background-position: 0 -3px;
-      background-repeat: no-repeat;
-      margin-right: 20px;
-    }
-
-    p {
-      font-size: 16px;
-    }
-
-    b {
-      font-size: 14px;
-    }
-
-    .removeBtn {
-      opacity: 0.5;
-      transition: 0.15 ease-in-out;
-      cursor: pointer;
-
-      &:hover {
-        opacity: 1;
-      }
-    }
-  }
-
-  .cartEmpty {
-    text-align: center;
-
-    p {
-      width: 280px;
-      line-height: 24px;
-    }
-
-    .greenButton {
-      width: 245px;
-      margin-top: 10px;
-      margin-bottom: 20px;
-
-      &:hover {
-        img {
-          transform: rotate(180deg) translateX(3px);
-        }
-      }
-
-      img {
-        position: relative;
-        top: 1px;
-        transform: rotate(180deg);
-        margin-right: 15px;
-        transition: transform 0.15s ease-in-out;
-      }
-    }
-  }
-
-  .cartTotalBlock {
-    ul {
-      display: block;
-      margin-bottom: 40px !important;
-
-    }
+.cartTotalBlock {
+  ul {
+    display: block;
+    margin-bottom: 40px !important;
 
     li {
       display: flex;
       align-items: flex-end;
       margin-bottom: 20px;
-    }
 
-    div {
-      flex: 1;
-      border-bottom: 1px dashed #dfdfdf;
-      height: 1;
+      div {
+        flex: 1;
+        height: 1px;
+        border-bottom: 1px dashed #dfdfdf;
+        position: relative;
+        top: -4px;
+        margin: 0 7px;
+      }
     }
-
   }
 
   .greenButton {
     position: relative;
-    width: 100%;
-    height: 55px;
-    background-color: #9dd558;
-    color: #fff;
-    border: 0;
-    border-radius: 18px;
-    font-size: 16px;
-    font-weight: 600;
-    transition: background 0.15s ease-in-out;
 
-    &:hover {
-      background-color: lighten($color: #9dd558, $amount: 5%);
-
-      img {
-        transform: translateX(10px);
-      }
+    &:disabled {
+      animation: button-loading 0.6s ease-in-out infinite;
     }
 
-    &:active {
-      background-color: darken($color: #9dd558, $amount: 5%);
+    &:hover {
+      img {
+        transform: translateX(5px);
+      }
     }
 
     img {
       position: absolute;
       right: 30px;
       top: 20px;
-      transition: transform 0.2s ease-in-out;
+      transition: transform 0.15s ease-in-out;
     }
   }
-
 }
 
-.form {
-
-  input {
-    width: 250px;
-    padding: 10px;
-    margin: 5px 0;
-    border: 0;
-    border-radius: 4px;
-    font-size: 16px;
-    font-weight: 400;
-    background: #f7f7f7;
-    color: #333;
-    transition: background 0.15s ease-in-out;
-    align-items: center;
-  }
-
-  .greenButton {
-    position: relative;
-    width: 250px;
-    height: 55px;
-    margin: 20px 20px;
-    background-color: #9dd558;
-    color: #fff;
-    border: 0;
-    border-radius: 18px;
-    font-size: 16px;
-    font-weight: 600;
-    transition: background 0.15s ease-in-out;
-  }
-
-}
-
-.register {
+.greenButton {
+  width: 100%;
+  height: 55px;
+  background: #9dd558;
+  border-radius: 18px;
+  border: 0;
+  color: #fff;
   font-size: 16px;
-  font-weight: 400;
-  margin: 40px 0px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background 0.1s ease-in-out;
 
+  &:disabled {
+    background-color: #bebebe !important;
+    cursor: default;
+  }
+
+  &:hover {
+    background: lighten(#9dd558, 5%);
+  }
+
+  &:active {
+    background: darken(#9dd558, 5%);
+  }
+}
+
+.cartItem {
+  border: 1px solid #f3f3f3;
+  border-radius: 20px;
+  overflow: hidden;
+  padding: 20px;
+
+  .cartItemImg {
+    height: 70px;
+    width: 70px;
+    background-size: contain;
+    background-position: 0 -3px;
+    background-repeat: no-repeat;
+    margin-right: 20px;
+  }
+
+  p {
+    font-size: 16px;
+    margin: 0;
+  }
+
+  b {
+    font-size: 14px;
+  }
+
+  .removeBtn {
+    opacity: 0.5;
+    cursor: pointer;
+    transition: opacity 0.15s ease-in-out;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+@keyframes button-loading {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.7;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
